--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Language" content="en">
-    <link rel="stylesheet" type="text/css" href="/github-syntax-highlight.css">
-    <link rel="stylesheet" type="text/css" href="/github-markdown.css">
+    <link rel="stylesheet" type="text/css" href="/github_syntax_highlight.css">
+    <link rel="stylesheet" type="text/css" href="/github_markdown.css">
     <style>
         .markdown-body {
             min-width: 200px;
@@ -20,28 +20,28 @@
         MathJax.Hub.Config({
             tex2jax: {
                 inlineMath: [
-                    ['$', '$'],
-                    ['\\', '\\']
+                    ["$", "$"],
+                    ["\\", "\\"]
                 ],
                 processEscapes: true
             }
         });
     </script>
     <script>
-        var socket = io.connect('http://localhost:8090/');
-        socket.on('connect', function() {
-            socket.on('newContent', function(newHTML) {
+        var socket = io.connect("http://localhost:18474/");
+        socket.on("connect", function() {
+            socket.on("newContent", function(newHTML) {
                 document.querySelector(".markdown-body").innerHTML = newHTML;
-                MathJax.Hub.Queue(['Typeset', MathJax.Hub]);
+                MathJax.Hub.Queue(["Typeset", MathJax.Hub]);
             });
-            socket.on('die', function(newHTML) {
-                window.open('', '_self', '');
+            socket.on("die", function(newHTML) {
+                window.open("", "_self", "");
                 window.close();
 
                 var firefoxWarning =
-                    '<h1>Oops!<\/h1>' +
-                    '<h3>Firefox doesn\'t allow windows to self-close.<\/h3>' +
-                    '<h3>If you want the preview window to close automatically like in other browsers, go to about:config and set dom.allow_scripts_to_close_windows to true.<\/h3>';
+                    "<h1>Oops!<\/h1>" +
+                    "<h3>Firefox doesn't allow windows to self-close.<\/h3>" +
+                    "<h3>If you want the preview window to close automatically like in other browsers, go to about:config and set dom.allow_scripts_to_close_windows to true.<\/h3>";
                 document.body.innerHTML = firefoxWarning;
             });
         });
